# CS621hw

./: README.md
Exercise1/: CMakeLists.txt  MeshViewer.cc  MeshViewer.hh  ValenceViewer.cc  ValenceViewer.hh  gl.hh  valenceview.cc
Exercise2/: CMakeLists.txt  ClosestPoint.cc  ClosestPoint.hh  GlutViewer.cc  GlutViewer.hh  Matrix.hh  Registration.cc  Registration.hh  RegistrationViewer.cc  Transformation.hh  gl.hh  registrationview.cc
Exercise2/ANN/: kd_dump.cpp
Exercise3/: CMakeLists.txt  output.off  readme.txt
Exercise3/gmm/: dal_basic.h
Exercise3/reconstruct/: ImplicitHoppe.hh  ImplicitRBF.cc  ImplicitRBF.hh  reconstruct.cc
Exercise3/viewer/: GlutExaminer.cc  GlutExaminer.hh  GlutViewer.hh  ValenceViewer.cc  ValenceViewer.hh  gl.hh  valenceview.cc
Exercise4/: CMakeLists.txt  GlutViewer.cc  MeshViewer.cc  QualityViewer.cc  QualityViewer.hh  SmoothingViewer.cc  SmoothingViewer.hh  smoother.cc
Exercise4/cmake/: FindOpenMesh.cmake
Exercise5/: CMakeLists.txt  QuadricT.hh  deci.cc
Non_rigid_registration/: CMakeLists.txt  ClosestPoint.cc  ClosestPoint.hh  CostFunctions.hh  DeformationGraph.cc  DeformationGraph.hh  EventList.cc  EventList.hh  GlutExaminer.cc  GlutExaminer.hh  GlutViewer.cc  GlutViewer.hh  ImproveMesh.cc  ImproveMesh.hh  Matrix.hh  Non_rigid_registration.cc  ParallelFor.hh  Point_Hash_Grid_Searcher3.cc  Point_Hash_Grid_Searcher3.hh  Registration.cc  Registration.hh  RegistrationViewer.cc  RegistrationViewer.hh  Timer.hh  Transformation.cc  Transformation.hh  Vector.hh  gl.hh  registrationview.cc
Non_rigid_registration/ANN/: ANN.cpp
Non_rigid_registration/geodesic/: geodesic_algorithm_exact.h
OpenMesh/lib/: libOpenMeshCore.so.6.3  libOpenMeshTools.so.6.3
OpenMesh/src/OpenMesh/Tools/Utils/: conio.cc
